[package]
name = "ipss-node-rust"
version = "0.1.0"
authors = ["Lev Stambler <levstamb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8.2"
kademlia-dht = "1.2.0"
lazy_static = "1.4.0"
log = "0.4.14"
sha3 = "0.9.1"
simple-server = "0.4.0"
